--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="COMP3910">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/JavaSource"/>
+        <dependent-module archiveName="timesheet.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/timesheet/timesheet">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="COMP3910"/>
         <property name="java-output-path" value="/COMP3910/WebContent/WEB-INF/classes"/>
     </wb-module>
